Fixed z-index menu

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -591,6 +591,7 @@ width: 517px;
 	margin: 0 10px 0px auto;
 	position: fixed;
 	right: 10px;
+	z-index: 9999;
 }
 
 
